--- a/package.json
+++ b/package.json
@@ -28,6 +28,10 @@
     "not op_mini all"
   ],
   "devDependencies": {
-    "node-sass": "^4.11.0"
+    "@types/styled-components": "^4.1.4",
+    "node-sass": "^4.11.0",
+    "styled-components": "^4.1.3",
+    "tslint": "^5.12.0",
+    "tslint-react": "^3.6.0"
   }
 }
