--- a/package.json
+++ b/package.json
@@ -2,6 +2,12 @@
   "name": "cra-ts",
   "version": "0.1.0",
   "private": true,
+  "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
+  },
   "dependencies": {
     "@types/jest": "23.3.10",
     "@types/node": "10.12.18",
@@ -12,11 +18,17 @@
     "react-scripts": "2.1.2",
     "typescript": "3.2.2"
   },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+  "devDependencies": {
+    "@types/enzyme": "^3.1.15",
+    "@types/styled-components": "^4.1.4",
+    "enzyme": "^3.8.0",
+    "enzyme-adapter-react-16": "^1.7.1",
+    "enzyme-to-json": "^3.3.5",
+    "node-sass": "^4.11.0",
+    "react-test-renderer": "^16.7.0",
+    "styled-components": "^4.1.3",
+    "tslint": "^5.12.0",
+    "tslint-react": "^3.6.0"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -27,11 +39,9 @@
     "not ie <= 11",
     "not op_mini all"
   ],
-  "devDependencies": {
-    "@types/styled-components": "^4.1.4",
-    "node-sass": "^4.11.0",
-    "styled-components": "^4.1.3",
-    "tslint": "^5.12.0",
-    "tslint-react": "^3.6.0"
+  "jest": {
+    "snapshotSerializers": [
+      "enzyme-to-json/serializer"
+    ]
   }
 }
