--- a/package.json
+++ b/package.json
@@ -20,10 +20,13 @@
   },
   "devDependencies": {
     "@types/enzyme": "^3.1.15",
+    "@types/enzyme-adapter-react-16": "^1.0.3",
+    "@types/http-proxy-middleware": "^0.19.1",
     "@types/styled-components": "^4.1.4",
     "enzyme": "^3.8.0",
     "enzyme-adapter-react-16": "^1.7.1",
     "enzyme-to-json": "^3.3.5",
+    "http-proxy-middleware": "^0.19.1",
     "node-sass": "^4.11.0",
     "react-test-renderer": "^16.7.0",
     "styled-components": "^4.1.3",
