--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "start": "react-scripts start",
+    "start": "node scripts/customized-config start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
@@ -27,11 +27,16 @@
     "enzyme-adapter-react-16": "^1.7.1",
     "enzyme-to-json": "^3.3.5",
     "http-proxy-middleware": "^0.19.1",
+    "husky": "^1.2.1",
     "node-sass": "^4.11.0",
+    "proxyquire": "^2.1.0",
     "react-test-renderer": "^16.7.0",
+    "rewire": "^4.0.1",
+    "sass-all-variable-loader": "^0.1.5",
     "styled-components": "^4.1.3",
     "tslint": "^5.12.0",
-    "tslint-react": "^3.6.0"
+    "tslint-react": "^3.6.0",
+    "yarnhook": "^0.3.0"
   },
   "eslintConfig": {
     "extends": "react-app"
