CircularDependencyPlugin added to dev build

--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@types/enzyme-adapter-react-16": "^1.0.3",
     "@types/http-proxy-middleware": "^0.19.1",
     "@types/styled-components": "^4.1.4",
+    "circular-dependency-plugin": "^5.0.2",
     "enzyme": "^3.8.0",
     "enzyme-adapter-react-16": "^1.7.1",
     "enzyme-to-json": "^3.3.5",
